dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/ExCo_Sponsorship_Visit__c.object-meta.xml
<CustomObject>
    <description>EAD-2227: The Sage Sponsorship will start to sponsor customers and would like to record details of their visits in Salesforce, so that agents are aware of this new relationship</description>
    <label>Sponsorship Visit</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Sponsorship Visit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsorship Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>