dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <description>EAD-2227: Actions taken away from meeting</description>
    <inlineHelpText>Actions taken away from meeting[Upto 9000 characters]</inlineHelpText>
    <label>Actions taken away from meeting</label>
    <length>9000</length>
    <type>LongTextArea</type>
</CustomField>