dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Attendee_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Attendee_from_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EAD-2227: Primary Attendee from Account(Link with Contact)</description>
    <inlineHelpText>Primary Attendee from Account</inlineHelpText>
    <label>Primary Attendee from Account</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ExCo_Sponsorship_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>