dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Attendee_from_Sage__c.field-meta.xml
<CustomField>
    <fullName>Attendee_from_Sage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EAD-2227: Attendee from Sage (link with User)</description>
    <inlineHelpText>Primary Attendee from Sage</inlineHelpText>
    <label>Primary Attendee from Sage</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExCo_Sponsorship_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>