dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Currency_Visible__c.field-meta.xml
<CustomField>
    <fullName>Currency_Visible__c</fullName>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Visible</label>
    <type>Checkbox</type>
</CustomField>