dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Customer_Insights__c.field-meta.xml
<CustomField>
    <fullName>Customer_Insights__c</fullName>
    <description>EAD-2227: Insights into customer’s business (think of strategic and operational challenges that the business faces, what are their pain points? What problems does this business have that need to be solved?)</description>
    <inlineHelpText>Insights into customer’s business (think of strategic and operational challenges that the business faces, what are their pain points? What problems does this business have that need to be solved?)[Upto 1000 characters]</inlineHelpText>
    <label>Insights into customer&apos;s business</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>