dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Visit__c</fullName>
    <description>EAD-2227:  Date of Visit</description>
    <inlineHelpText>Date of Visit</inlineHelpText>
    <label>Date of Visit</label>
    <type>Date</type>
</CustomField>