dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/End_time_of_sponsorship_visit__c.field-meta.xml
<CustomField>
    <fullName>End_time_of_sponsorship_visit__c</fullName>
    <description>End time of sponsorship visit
Created as part of EAD-2462</description>
    <label>End time of sponsorship visit</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>