dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/ExCo_Account__c.field-meta.xml
<CustomField>
    <fullName>ExCo_Account__c</fullName>
    <description>EAD-2227: Link with Account</description>
    <inlineHelpText>Link with Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sponsorship_Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>