dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Other_Attendees_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Other_Attendees_from_Account__c</fullName>
    <description>EAD-2227: Other Attendees from Account</description>
    <inlineHelpText>Other Attendees from Account[Upto 255 characters]</inlineHelpText>
    <label>Other Attendees from Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>