dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Other_Attendees_from_Sage__c.field-meta.xml
<CustomField>
    <fullName>Other_Attendees_from_Sage__c</fullName>
    <description>EAD-2227: Other Attendees from Sage[Upto 255 characters]</description>
    <inlineHelpText>Other Attendees from Sage[Upto 255 characters]</inlineHelpText>
    <label>Other Attendees from Sage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>