dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Product_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Product_Feedback__c</fullName>
    <description>EAD-2227: Feedback on Sage product / experience</description>
    <inlineHelpText>Feedback on Sage product / experience[Upto 1000 characters]</inlineHelpText>
    <label>Feedback on Sage product / experience</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>