dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Start_time_of_sponsorship_visit__c.field-meta.xml
<CustomField>
    <fullName>Start_time_of_sponsorship_visit__c</fullName>
    <description>Start time of sponsorship visit
Created as Part of EAD-2462</description>
    <label>Start time of sponsorship visit</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>