dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Time_taken_on_sponsorship_visit__c.field-meta.xml
<CustomField>
    <fullName>Time_taken_on_sponsorship_visit__c</fullName>
    <description>Time taken on sponsorship visit (in HH:MM)</description>
    <formula>TEXT( IF(FLOOR((End_time_of_sponsorship_visit__c - Start_time_of_sponsorship_visit__c)*24) &gt; 0, FLOOR((End_time_of_sponsorship_visit__c - Start_time_of_sponsorship_visit__c)*24) , 0)) &amp; &quot;hr &quot; &amp; TEXT(IF(FLOOR((End_time_of_sponsorship_visit__c - Start_time_of_sponsorship_visit__c)*24*60) &gt; 59, FLOOR((End_time_of_sponsorship_visit__c - Start_time_of_sponsorship_visit__c)*24*60) - FLOOR((End_time_of_sponsorship_visit__c - Start_time_of_sponsorship_visit__c)*24)*60 , FLOOR((End_time_of_sponsorship_visit__c - Start_time_of_sponsorship_visit__c)*24*60))) &amp; &quot;mins&quot;</formula>
    <inlineHelpText>Time taken on sponsorship visit (in HH:MM)</inlineHelpText>
    <label>Time taken on sponsorship visit</label>
    <type>Text</type>
</CustomField>