dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Time_taken_on_sponsorship_visit_hours__c.field-meta.xml
<CustomField>
    <fullName>Time_taken_on_sponsorship_visit_hours__c</fullName>
    <description>EAD-2227: Time taken on sponsorship visit (hours)</description>
    <inlineHelpText>Time taken on sponsorship visit (hours)[Upto 5 digits]</inlineHelpText>
    <label>Time taken on sponsorship visit (hours)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>