dxscale/sales/sponsorship/objects/ExCo_Sponsorship_Visit__c/fields/Time_taken_on_sponsorship_visit_in_min__c.field-meta.xml
<CustomField>
    <fullName>Time_taken_on_sponsorship_visit_in_min__c</fullName>
    <description>Time taken on sponsorship visit (in min)
Not added on any page layout</description>
    <formula>FLOOR((End_time_of_sponsorship_visit__c - Start_time_of_sponsorship_visit__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time taken on sponsorship visit (in min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>